added an h1 and better label to specify what the search looks for

--- a/videogames.html
+++ b/videogames.html
@@ -5,8 +5,8 @@
     <title>Using jQuery Ajax with JSON</title>
 </head>
 <body>
-
-<label>Enter a name:
+<h1>Video game search</h1>
+<label>Enter the name of a video game:
     <input type="text" id="search">
 </label>
 <button id="get">Get JSON Data</button>
